[package]
name = "arduino-uno-template"
version = "0.0.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
ws2812-spi = "0.4.0"
smart-leds = "0.3.0"
tinyvec = "1.5"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "c9b92686c019351f48ad41f093fa15a9d2f25542"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.3"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
