[package]
name = "arduino-uno-template"
version = "0.0.0"
edition = "2018"

[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
embedded-hal = "0.2.3"
nb = "0.1.2"
panic-halt = "0.2.0"
pwm-pca9685 = "0.3.1"
smart-leds = "0.3.0"
ufmt = "0.1.0"
ws2812-spi = "0.4.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "c9b92686c019351f48ad41f093fa15a9d2f25542"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.3"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
